Add Ingredients and Steps to chilaquiles

--- a/recipes/chilaquiles.html
+++ b/recipes/chilaquiles.html
@@ -7,6 +7,38 @@
 </head>
 <body>
     <h1>Chilaquiles</h1>
-    <p><a href="../images/chilaquiles.jpg">Chilaquiles</a></p>
+    <img src="../images/chilaquiles.jpg" alt="Chilaquiles" height="400" width="600">
+    <p>Chilaquiles is a traditional Mexican dish, commonly eaten at breakfast</p>
+    <h2>Ingredients</h2>
+    <h3>Salsa:</h3>
+    <ul>
+       <li>5 jitomates</li>
+       <li>1 diente de ajo</li>
+       <li>¼ de cebolla</li>
+       <li>2 chiles serrano sin rabo</li>
+       <li>4 ramitas de cilantro</li>
+       <li>1 cucharada de aceite</li>   
+       <li>1 cubo (10.5 gramos) de Knorr Tomatísimo 8 Cubos Concentrado De Tomate</li>
+
+    </ul>
+    <h3> Serving & Garnishes</h3>
+    <ul>
+        <li>6 tazas de totopos de maíz</li>
+        <li>4 cucharaditas de crema reducida en grasa</li>
+        <li>4 cucharaditas de queso fresco rallado</li>
+        <li>1/2 cebolla blanca en aros</li>
+    </ul>
+    <h2>Steps</h2>
+    <h3>Salsa</h3>
+    <ol>
+        <li>Hierve los jitomates junto con el ajo, la cebolla y los chiles en suficiente agua durante 15 minutos o hasta que estén suaves</li>
+        <li>Licúa lo anterior con media taza del agua donde se cocieron los jitomates, el cilantro y el cubo de Tomatísimo®. Cuela</li>
+        <li>Calienta el aceite en una olla y cocina la salsa durante 10 minutos.</li>
+    </ol>
+    <h3>Serving</h3>
+    <ol>
+        <li>Agrega los totopos y deja a fuego bajo durante un par de minutos para que se impregnen bien con la salsa.</li>
+        <li>Reparte los chilaquiles en cada plato y sirve con crema, queso fresco y aros de cebolla.</li>
+    </ol>
 </body>
 </html>
