Add Ingredients and Steps to egg-fried-rice

--- a/recipes/egg-fried-rice.html
+++ b/recipes/egg-fried-rice.html
@@ -7,5 +7,47 @@
 </head>
 <body>
     <h1>Egg Fried Rice</h1>
+    <img src="../images/egg-fried-rice.jpg" alt="Egg Fried Rice" height="400" width="600">
+    <p>Egg Fried Rice is a popular dish across east and southeast asia, based on leftover Rice</p>
+    <h2>Ingredients</h2>
+    <h3>Fried Rice:</h3>
+    <ul>
+       <li>4 Cups Cooked Rice</li>
+       <li>3 Eggs, scrambled</li>
+       <li>3 Tbsp (42 g) Vegetable Oil</li>
+       <li>1 Carrot, diced</li>
+       <li>1 Bunch Green Onions</li>
+       <li>Whites of Green Onions, thinly sliced</li>   
+       <li>1 cup (135 g) Frozen Peas</li>
+
+    </ul>
+    <h3>Fried Rice Sauce:</h3>
+    <ul>
+        <li>Salt/li>
+        <li>1 Tbsp (14 g) Unsalted Butter</li>
+        <li>1 Tbsp (14 g) Granulated Sugar</li>
+        <li>3 Tbsp (42 g) Soy Sauce</li>
+        <li>1 Tbsp (12 g) White Vinegar</li>
+        <li>3 Cloves Garlic, grated</li>
+        <li>1 Tbsp Ginger, grated</li>
+    </ul>
+    <h2>Steps</h2>
+    <h3>Salsa</h3>
+    <ol>
+        <li>In a medium size pot, add rice and water. Set over medium-high heat and bring to a boil.</li>
+        <li>Lower to a simmer and cover. Lightly simmer for 15 minutes. </li>
+        <li>Remove from heat and steam an additional 15 minutes. </li>
+        <li>Place on a pan to cool. Fridging overnight recommended. </li>
+        <li>For the scrambled eggs, whisk together eggs seasoned with salt. </li>
+        <li>In a nonstick skillet, add and melt unsalted butter. Add eggs once butter is bubbling. </li>
+        <li>Cook over medium heat. Bring in sides of eggs occasionally. Flip when mostly cooked. Place on a cutting board once finished and roughly chopped. </li>
+        <li>In a small bowl, add granulated sugar, soy sauce, white vinegar and whisk together. Add grated garlic and ginger. Whisk together. </li>
+        <li>In a 12” skillet set over medium-high, add vegetable oil and diced carrots once ripping hot. Saute until soft and coloring. </li>
+        <li>Add green onions and saute until colored then add in the thinly sliced green onion whites. Stir and saute for an additional minute or so. </li>
+        <li>Add in frozen peas over high heat and continue cooking until just hot. </li>
+        <li>Add cooked leftover rice. Stir frequently on high heat then add in the soy sauce, turn off heat, and stir together. </li>
+        <li>Once mixed, add in the scrambled eggs and fold together before serving.  </li>
+    </ol>
+</body>
 </body>
 </html>
