Add Ingredients and Steps to lasagna

--- a/recipes/egg-fried-rice.html
+++ b/recipes/egg-fried-rice.html
@@ -23,7 +23,7 @@
     </ul>
     <h3>Fried Rice Sauce:</h3>
     <ul>
-        <li>Salt/li>
+        <li>Salt</li>
         <li>1 Tbsp (14 g) Unsalted Butter</li>
         <li>1 Tbsp (14 g) Granulated Sugar</li>
         <li>3 Tbsp (42 g) Soy Sauce</li>
@@ -32,7 +32,6 @@
         <li>1 Tbsp Ginger, grated</li>
     </ul>
     <h2>Steps</h2>
-    <h3>Salsa</h3>
     <ol>
         <li>In a medium size pot, add rice and water. Set over medium-high heat and bring to a boil.</li>
         <li>Lower to a simmer and cover. Lightly simmer for 15 minutes. </li>
