--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,6 +6,75 @@
     <title>Lasagna</title>
 </head>
 <body>
-    <h1>Lasagna</h1>
+    <h1>Egg Fried Rice</h1>
+    <img src="../images/lasagna.jpg" alt="Lasagna" height="400" width="600">
+    <p>Lasagna is a traditional Italian dish commonly eaten at family events</p>
+    <h2>Ingredients</h2>
+    <h3>Homemade Pasta: </h3>
+    <ul>
+       <li>2 cups(300g) all-purpose flour</li>
+       <li>2 whole eggs</li>
+       <li>3 egg yolks</li>
+       <li>Touch of olive oil</li>
+
+    </ul>
+    <h3>Sauce: </h3>
+    <ul>
+        <li>9 lasagna noodles</li>
+        <li>1 pound (450g) ground beef</li>
+        <li>3/4 pound (340g) ground pork </li>
+        <li>2 tablespoons (30g) vegetable oil</li>
+        <li>1 yellow onion, finely diced</li>
+        <li>5 cloves garlic, thinly sliced</li>
+        <li>2 teaspoons (3g) finely chopped thyme</li>
+        <li>2 teaspoons fennel seeds (4g), finely ground </li>
+        <li>Salt and pepper to taste </li>
+        <li>1 (28oz) can crushed tomatoes </li>
+        <li>1( (6oz) can tomato paste (.70 cents))</li>
+        <li>Water if needed </li>
+    </ul>
+    <h3>Assembly</h3>
+    <ul>
+        <li>15 oz (425g)  tub ricotta </li>
+        <li>1 egg</li>
+        <li>8 oz (225g) mozzarella </li>
+        <li>1/3 cup parmesan cheese</li>
+    </ul>
+    <h2>Steps</h2>
+    <h3>Pasta</h3>
+    <ol>
+        <li>Add the flour to a large bowl. Create a well in the center of the flour. </li>
+        <li>To the well, add in 3 egg yolks and 2 whole eggs. Whisk together using a fork. </li>
+        <li>While whisking, slowly incorporate the flour into the eggs until a shaggy dough forms. </li>
+        <li>Pour onto a work surface and begin kneading by hand until smooth. /li>
+        <li>Wrap in plastic wrap and rest for 30 minutes. </li>
+        <li>Divide the dough into 4 equal portions. Shape into an oval and roll it out just under ½-inch thick./li>
+        <li>Run through a pasta roller starting with the widest setting working towards the number 4 setting until the dough is ⅛-inch thick. Repeat with remaining pieces of dough. </li>
+        <li>Cut to line-up with a 9x13 pan then cut in half lengthwise. Should have 10-12 sheets. </li>
+    </ol>
+    <h3>Sauce: </h3>
+    <ol>
+        <li>In a dutch oven or heavy pot, heat the oil over medium-high heat until ripping hot. </li>
+        <li>Add in the ground meat and sear for 3-4 minutes, flip and repeat on the other side for 2-3 minutes. Mash all the meat together using a potato masher until fine. Transfer to a separate container. </li>
+        <li>Add more oil to the pot if needed, add in the finely sliced garlic, and reduce heat to medium. Stirring occasionally until the garlic begins to toast.</li>
+        <li>Add in diced yellow onion, season to taste with salt stirring together, and saute until the onions turn translucent. </li>
+        <li>Once the onions are translucent, add in fennel powder and stir together. Saute for 30 seconds. </li>
+        <li>Add the tomato paste and stir together. Saute until it has caramelized and sticks to the bottom of the pan.</li>
+        <li>Stir in a can of crushed tomatoes then add the meat back to the pot and stir until incorporated. </li>
+        <li>Simmer and reduce for 5-7 minutes or until slightly thickened. Season to taste with salt and pepper.</li>
+    </ol>
+    <h3>Cheese Mixture</h3>
+    <ol>
+        In a medium bowl, mix together all ingredients until combined. 
+    </ol>
+    <h3>Assembly</h3>
+    <ol>
+        <li>Precook pasta noodles until al dente.</li>
+        <li>Mix grated mozzarella and parmesan cheese in a small bowl. </li>
+        <li>Preheat the oven to 375. </li>
+        <li>In a 9x13 add 1 cup sauce, top with 3 noodles, layer 1/3 of cheese mix, another cup of meat sauce, repeat two more times, finish with 3 more noodles on top with more sauce on top and cheese.</li>
+        <li>Cover with foil that’s been sprayed with oil, and bake for 25 minutes covered, uncover and bake for 25 more minutes.</li>
+        <li>Cool for 15 minutes. Cut and serve.</li>
+    </ol>
 </body>
 </html>
