--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <p></p><a href="recipes/bolognesa.html">Bolognesa</a></p>
+    <p></p><a href="recipes/egg-fried-rice.html">Egg Fried Rice</a></p>
     <p></p><a href="recipes/chilaquiles.html">Chilaquiles</a></p>
     <p></p><a href="recipes/lasagna.html">Lasagna</a></p>
 </body>
