Change images and spelling errors

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <img src="../images/chef.jpg" alt="Chef" height="400" width="600">
+    <img src="images/chef.jpg" alt="Chef" height="400" width="600">
     <p></p><a href="recipes/egg-fried-rice.html">Egg Fried Rice</a></p>
     <p></p><a href="recipes/chilaquiles.html">Chilaquiles</a></p>
     <p></p><a href="recipes/lasagna.html">Lasagna</a></p>
