--- a/recipes/egg-fried-rice.html
+++ b/recipes/egg-fried-rice.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Egg Fried Rice</h1>
-    <img src="../images/egg-fried-rice.jpg" alt="Egg Fried Rice" height="400" width="600">
+    <img src="../images/egg-fried-rice.jpeg" alt="Egg Fried Rice" height="400" width="600">
     <p>Egg Fried Rice is a popular dish across east and southeast asia, based on leftover Rice</p>
     <h2>Ingredients</h2>
     <h3>Fried Rice:</h3>
@@ -47,6 +47,5 @@
         <li>Add cooked leftover rice. Stir frequently on high heat then add in the soy sauce, turn off heat, and stir together. </li>
         <li>Once mixed, add in the scrambled eggs and fold together before serving.  </li>
     </ol>
-</body>
 </body>
 </html>
