Change Lasagna title error

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,7 +6,7 @@
     <title>Lasagna</title>
 </head>
 <body>
-    <h1>Egg Fried Rice</h1>
+    <h1>Lasagna</h1>
     <img src="../images/lasagna.jpg" alt="Lasagna" height="400" width="600">
     <p>Lasagna is a traditional Italian dish commonly eaten at family events</p>
     <h2>Ingredients</h2>
